--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ pagination_dir: page
 
 # Extensions
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: hexo-theme-next
 Plugins: hexo-generate-feed
 ## theme: anatole
 
