--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: wandou の blog
-subtitle:
+title: 云梦泽
+subtitle: 要把梦藏在树叶里 不然梦会化
 description:
 keywords:
 author: wandouni
-avatar: https://tvax3.sinaimg.cn/crop.0.0.888.888.180/77a03329ly8fqn191oqlpj20oo0oon0u.jpg
-language: zh-Hans
+avatar: https://wx1.sinaimg.cn/mw1024/77a03329gy1gbwxtybnkej20u0140u0x.jpg
+language: zh-CN
 timezone: Asia/Shanghai
 
 # URL
